syntax = "proto3";

package proto;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "proto.proto";

service logic {
	rpc single (singleReq) returns (singleReply);

	rpc connect (connectReq) returns (connectReply);

	rpc disConnect (disConnectReq) returns (disConnectReply);
}


message connectReq {
	int64 sid = 1;
	int64 uid = 2;
}

message connectReply {
}

message disConnectReq {
}

message disConnectReply {
}

message singleReq {
	int64 uid = 1;
	Proto proto = 2;

}


message singleReply {
}